Agregué pequeñas modificaciones a la notificación del header del terapeuta y a los estilos de las tablas

--- a/ortesisWeb/static/css/base/header.css
+++ b/ortesisWeb/static/css/base/header.css
@@ -5,8 +5,11 @@
 }
 
 .notification-icon {
+    height: 100%;
+    display: flex;
     position: relative;
-    margin-left: auto;
+    justify-content: flex-end;
+    align-items: flex-start;
 }
 
 .notification-icon img {
