--- a/terapeuta/static/css/calendar.css
+++ b/terapeuta/static/css/calendar.css
@@ -22,6 +22,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-right: 80px; /* Reduce el espacio solo en el lado derecho */
+    margin-top: -140px;
 }
 .month-header {
     font-size: 1.5em;
