--- a/administrador/static/css/listar_pacientes_administrador.css
+++ b/administrador/static/css/listar_pacientes_administrador.css
@@ -1,39 +1,28 @@
-/* Contenedor general de los pacientes */
-.pacientes-container {
+.main-content {
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.contenedor-header {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 40px;
     width: 100%;
-    margin: 0 auto;
-    padding: 0px;
-    max-width: 1200px;
 }
 
-/* Ajustar el contenedor de la cabecera */
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-    padding: 10px;
-}
-
-/* Botón Agregar Paciente */
-.agregar-paciente-btn {
-    background-color: #373d58;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 14px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+.contenedor-header h1 {
+    font-size: 48px;
+    color: black;
+    font-weight: 500;
 }
 
 /* Formulario de búsqueda */
 .busqueda-form {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
 }
 
 .busqueda-input {
@@ -53,6 +42,32 @@
     background-color: #f9f9f9;
     font-size: 16px;
 }
+
+#boton-agregar-paciente {
+    background-color: #001058;
+    color: #fff;
+    border: none;
+    padding: 3px 20px;
+    border-radius: 25px;
+    font-size: 16px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#boton-agregar-paciente img {
+    width: 34px;
+    height: 34px;
+}
+
+#boton-agregar-paciente:hover {
+    background-color: #002080; /* Un color ligeramente más claro para el hover */
+}
+
+
 
 /* Botón de filtro */
 .filtro-btn {
@@ -90,36 +105,6 @@
     color: white;
 }
 
-/* Estilo para la tabla de pacientes */
-.table-responsive {
-    width: 100%;
-    margin-top: 20px;
-}
-
-.table {
-    width: 100%;
-    background-color: #ffffff;
-    border-collapse: collapse;
-    border-radius: 10px;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
-}
-
-.table th, .table td {
-    padding: 15px;
-    text-align: left;
-    font-size: 14px;
-    border-bottom: 1px solid #d9d9d9;
-}
-
-.table th {
-    background-color: #f9f9f9;
-    font-weight: bold;
-}
-
-.table td:last-child {
-    text-align: right;
-}
-
 /* Botones de acciones en la tabla */
 .table .btn {
     padding: 5px 10px;
@@ -145,13 +130,6 @@
     color: #999;
 }
 
-/* Título principal */
-.header h1 {
-    font-size: 36px;
-    font-weight: bold;
-    color: #333;
-    margin: 0;
-}
 .modal {
     display: none; /* Inicialmente oculto */
     position: fixed; /* Fijado en la pantalla */
