--- a/ortesisWeb/static/css/base/header.css
+++ b/ortesisWeb/static/css/base/header.css
@@ -10,6 +10,7 @@
     position: relative;
     justify-content: flex-end;
     align-items: flex-start;
+    margin-left: auto;
 }
 
 .notification-icon img {
