--- a/administrador/static/css/listar_pacientes_administrador.css
+++ b/administrador/static/css/listar_pacientes_administrador.css
@@ -4,6 +4,11 @@
     flex-direction: column;
 }
 
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .contenedor-header {
     display: flex;
     flex-flow: row nowrap;
@@ -50,12 +55,14 @@
     padding: 3px 20px;
     border-radius: 25px;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 500;
     display: flex;
+    flex-direction: row;
     align-items: center;
     gap: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    text-wrap: nowrap;
 }
 
 #boton-agregar-paciente img {
@@ -67,11 +74,18 @@
     background-color: #002080; /* Un color ligeramente más claro para el hover */
 }
 
-
+.contenedor-superior{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 0 10px 0 10px;
+}
 
 /* Botón de filtro */
 .filtro-btn {
-    background-color: #373d58;
+    background-color: #001058;
     color: white;
     border: none;
     border-radius: 5px;
@@ -87,24 +101,60 @@
 .filtros {
     display: flex;
     gap: 10px;
-    margin-bottom: 20px;
 }
 
-.filtros button {
-    background-color: #f9f9f9;
-    border: 2px solid #d9d9d9;
-    padding: 5px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 14px;
-    color: #333;
-}
-
-.filtros button.active {
-    background-color: #373d58;
+.filtros a{
+    text-decoration: none;
+    font-weight: 400;
+    padding: 5px 10px 5px 10px;
     color: white;
+    border-radius: 5px;
+    background-color: rgba(55, 61, 88, 0.5);
 }
 
+.filtros .btn-active {
+    background-color: #001058;
+}
+
+.filtros .btn-inactive {
+    background-color: rgba(55, 61, 88, 0.5);
+}
+
+.filtros .btn-active:hover {
+    background-color: #002080;
+}
+
+.filtros a:hover {
+    background-color: rgba(55, 61, 88, 0.7);
+}
+
+#inactivar-btn:enabled, #restaurar-btn:enabled {
+    background-color: #001058;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 15px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+#inactivar-btn:enabled:hover, #restaurar-btn:enabled:hover {
+    background-color: #002080;
+}
+
+#inactivar-btn:disabled, #restaurar-btn:disabled {
+    background-color: #cccccc;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 15px;
+    cursor: not-allowed;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
 /* Botones de acciones en la tabla */
 .table .btn {
     padding: 5px 10px;
