--- a/administrador/templates/admin_pacientes.html
+++ b/administrador/templates/admin_pacientes.html
@@ -17,26 +17,28 @@
         </div>
     </form>
 </div>
-<button id="boton-agregar-paciente" >Agregar Paciente<img src="{% static 'icons/plus.svg' %}"></button>
+<button id="boton-agregar-paciente">Agregar Paciente<img src="{% static 'icons/plus.svg' %}"></button>
 {% endblock %}
 
 {% block content %}
 
 <div class="contenedor-superior">
-    <div class="filtros mt-3">
-        <a href="{% url 'listar_pacientes_activos' %}" class="btn {% if estado == 'activos' %}active{% endif %}" type="button">Activos</a>
-        <a href="{% url 'listar_pacientes_inactivos' %}" class="btn {% if estado == 'inactivos' %}active{% endif %}" type="button">Inactivos</a>
+
+    <div class="filtros">
+        <a href="{% url 'listar_pacientes_activos' %}" class="btn-{% if estado == 'activos' %}active{% endif %}" type="button">Activos</a>
+        <a href="{% url 'listar_pacientes_inactivos' %}" class="btn-{% if estado == 'inactivos' %}active{% endif %}" type="button">Inactivos</a>
+    </div>
+
+    <div class="seleccion-estados">
+        {% if estado == 'activos' %}
+            <button id="inactivar-btn" class="btn btn-warning" disabled>Inactivar</button>
+        {% elif estado == 'inactivos' %}
+            <button id="restaurar-btn" class="btn btn-success" disabled>Restaurar</button>
+        {% endif %}
     </div>
 
     <button class="filtro-btn" type="button">Filtrar</button>
-</div>
-
-<div class="mt-3">
-    {% if estado == 'activos' %}
-        <button id="inactivar-btn" class="btn btn-warning" disabled>Pasar a estado inactivo</button>
-    {% elif estado == 'inactivos' %}
-        <button id="restaurar-btn" class="btn btn-success" disabled>Restaurar seleccionados</button>
-    {% endif %}
+    
 </div>
 
 <div class="table-responsive">
