front recuperar contrasena

--- a/autenticacion/static/styles/password_reset.css
+++ b/autenticacion/static/styles/password_reset.css
@@ -48,8 +48,8 @@ body {
     border-radius: 0.625em;
     box-shadow: 0.3125em 0.3125em 0.25em rgba(0, 0, 0, 0.25);
     text-align: center;
-    width: 40vw;
-    height: 30vw;
+    width: 38vw;
+    height: 25vw;
     justify-self: center;
     align-self: center;
     border: white 0.0625em solid;
@@ -65,7 +65,7 @@ body {
 
 .password_reset-contenedor h2 {
     color: black;
-    font-size: 2.5em;
+    font-size: 2em;
     margin-bottom: 1.25em;
     border-bottom: black 0.0625em solid;
     padding-bottom: none;
@@ -75,21 +75,33 @@ body {
 .password_reset-contenedor h3 {
     color: black;
     margin-bottom: 1.25em;
+    font-size: 1.5em;
+    font-weight: 400;
+    padding: 10px 10px;
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.inputs-contenedor h2.no-border {
-    border-bottom: none; /* Elimina el borde del <h2> con la clase .no-border */
-    margin-bottom: 1.25em;
-}
 
 .inputs-contenedor{
     justify-content: center;
     align-items: center;
     margin: 4em 0;
 }
+
+.inputs-contenedor h2.no-border {
+    border-bottom: none; /* Elimina el borde del <h2> con la clase .no-border */
+    margin-bottom: 1em;
+    font-weight: 600;
+    font-size: 1.75em;
+}
+
 .input-password_reset {
-    margin-bottom: 1.5em;
-    position: relative;
+    display: flex;
+    align-items: center;
+    margin: 0 auto 1.5em auto;
+    width: 90%;
 }
 
 .input-password_reset input {
@@ -97,10 +109,10 @@ body {
     padding: 0.625em;
     border-radius: 3.125em;
     border: black 0.0625em solid;
-    height: 3.75em;
+    height: 2.25em;
     color: black;
-    font-size: 1em;
-    font-weight: 500;
+    font-size: 1.5em;
+    font-weight: 400;
 }
 
 .input-password_reset input::placeholder {
@@ -179,24 +191,19 @@ body {
     background-color: #008CAB;
     color: white;
     border: #008CAB 0.0625em solid;
-    padding: 0.625em;
-    width: 100%;
+    padding: 10px;
+    width: 65%;
     border-radius: 3.125em;
     cursor: pointer;
-    font-size: 2em;
-    font-weight: 500;
+    font-size: 1.5em;
+    font-weight: 600;
+    transition: background-color 0.3s, color 0.3s, border 0.3s;
 }
 
 .btn:hover {
-    background-color: #CECECE;
-    color: black;
-    border: white 0.0625em solid;
-    padding: 0.625em;
-    width: 100%;
-    border-radius: 3.125em;
-    cursor: pointer;
-    font-size: 2em;
-    font-weight: 500;
+    background-color: #005f73;
+    color: white;
+    border: #005f73 0.0625em solid;
 }
 
 @media (max-width: 1600px) {
